k8s/todo-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-service
  namespace: todo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-service
  template:
    metadata:
      labels:
        app: todo-service
    spec:
      containers:
        - name: todo-service
          image: 22i1029/todo-service:latest
          ports:
            - containerPort: 5001
---
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  namespace: todo-app
spec:
  selector:
    app: todo-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type: ClusterIP
